rename variable and methodname